# GEN_AI_COSO_CPE_COURSE

./: .env.example  README.md  eslint.config.js  index.html  migration-details.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.claude/: launch.json
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
backend/apps/accounts/: api.py  apps.py  microsoft_auth.py  models.py  serializers.py  urls.py
backend/apps/accounts/management/commands/: ensure_dev_admin.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/tests/: test_auth_api.py  test_ensure_dev_admin.py  test_microsoft_auth.py  test_user_model.py
backend/apps/courses/: api.py  apps.py  blocks.py  models.py  serializers.py  urls.py
backend/apps/courses/management/commands/: seed_demo_course.py
backend/apps/courses/migrations/: 0001_initial.py
backend/apps/courses/templates/courses/: _base.html  assessment_page.html  course_index_page.html  course_page.html  evaluation_page.html  module_page.html  review_page.html
backend/apps/courses/templates/courses/blocks/: callout.html  example.html  heading.html  list.html  paragraph.html  section.html  table.html  warning.html
backend/apps/courses/tests/: test_api.py  test_page_tree.py  test_questions.py  test_seed_command.py  test_streamfield.py
backend/apps/progress/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
backend/apps/progress/migrations/: 0001_initial.py
backend/apps/progress/tests/: test_api.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/config/tests/: test_smoke.py
src/: App.tsx  index.css
src/api/: auth.ts  client.ts  courses.ts  progress.ts
src/components/: Assessment.tsx  Certificate.tsx  ContentBlock.tsx  CourseOverview.tsx  ErrorBoundary.tsx  Evaluation.tsx  Login.tsx  ModuleView.tsx  NavBar.tsx  RequireAccess.test.tsx  RequireAccess.tsx  ReviewQuestions.tsx  Sidebar.tsx
src/data/: courseContent.ts
src/store/: authContext.ts  authStore.tsx  courseDataContext.ts  courseStore.ts  (+7 more)
(+1 files in other folders)
